--- a/WYPOŻYCZALNIA/style.css
+++ b/WYPOŻYCZALNIA/style.css
@@ -204,11 +204,9 @@ display: none;
 
 .cards_continer
 {
-    width: 100%;
     min-height: 110vh;
     height: auto;
     padding-bottom: 50px;
-    margin-right: 200px;
     padding-left: 200px;
     background: transparent(160, 160, 160);
 }
@@ -264,7 +262,7 @@ display: none;
 .div_back
 {
     width: 100%;
-    margin-top: 300px;
+    margin-top: 400px;
     text-align: center;
     font-weight: bold;
 }
@@ -563,10 +561,10 @@ input[name='take_date_form'],input[name='back_date_form']
 
 .navbar
 {
-    width: 100%;
     height:50px;
     background-color:rgba(7, 7, 7, 0.5);
     margin: 0;
+    padding-left:10px;
 }
 
 .navbar li
@@ -581,7 +579,7 @@ input[name='take_date_form'],input[name='back_date_form']
 .navbar li:first-child
 {
     margin-left: 0;
-    margin-right:40px;
+    margin-right:20px;
     background: -webkit-linear-gradient(rgb(105, 204, 80),rgb(16, 165, 170));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -658,7 +656,7 @@ select[name='form_choose_car']
 {
     width: auto;
     float: left;
-    margin-left: 120px;   
+    margin-left: 100px;   
 }
 .table
 {
@@ -671,8 +669,9 @@ select[name='form_choose_car']
 .table_reservation
 {
     width: 100%;
-    padding: 50px 100px 80px 100px;
+    padding: 0 100px 0 100px;
     font-size: 30px;
+    dispay: inline-table !important;
     
 }
 
